--- a/requirements.txt
+++ b/requirements.txt
@@ -7,8 +7,8 @@ Flask-SQLAlchemy>=2.4,<3
 flask-sqlacodegen
 
 marshmallow>=2.13.5,<3
-flask-marshmallow>=0.7,<0.8
-marshmallow-sqlalchemy>=0.12,<0.13
+# flask-marshmallow>=0.7,<0.8
+# marshmallow-sqlalchemy>=0.12,<0.13
 marshmallow_jsonschema==0.10.0
 webargs>=1.4.0,<2
 
@@ -30,3 +30,5 @@ python_ldap==3.4.0
 requests==2.22.0
 six==1.14.0
 Werkzeug==1.0.1
+
+pydantic
